--- a/Macha/Home.html
+++ b/Macha/Home.html
@@ -61,7 +61,7 @@
           <b><div class="numbertext">Services 1 / 6</div>
           <img src="e8.jpeg" height="500px"width="1200px">
            
-          <div class="text"><h1><u> <br>Want to Serve your kids <br>Hot and Fresh Lunch?</u></h1></div><br><br>
+          <div class="text"><h1><u> Want to Serve your kids <br>Hot and Fresh Lunch?</u></h1></div><br><br>
           <div class="text1">Dont Worry!! Macha is here!<br><br>
             Macha guys are here to pick your<br> Children Lunch Box from your home
             <br>and deliver at their School  Everyday. <br>Safe and Fast.</div>
