--- a/Macha/Services.html
+++ b/Macha/Services.html
@@ -20,7 +20,7 @@
          <img src="11.jpeg" alt="not available" height="150" width="150" >
         </div>
             <div class="barl">
-            <ul>  <li><a target="_self" href="home.html"><font color="white"><u>Home</font></u></a></li>
+            <ul>  <li><a target="_self" href="Home.html"><font color="white"><u>Home</font></u></a></li>
 
                <li><a target="_self" href="Aboutus.html"><font color="white"><u>About us</font></u></a></li>
 
