--- a/Macha/Aboutus.html
+++ b/Macha/Aboutus.html
@@ -126,7 +126,7 @@
                     confirmation at the same time the nearest localist delivery boy also get the notification of required information and where he/she needs to deploy it with OTP . 
                     <br><br>Once the other person ready with the things  he/she must generate the OTP by submitting 
                     the complete button the final OTP will deliver to first user and delivery boy.
-                    he will pick it from the address and deploy at location (location tracking ) once the order delivered to first user he needs to enter the obtain OTP from End user. So that end user can get the confirmation of received order by notification.
+                    he will pick it from the address and deploy at location once the order delivered to first user he needs to enter the obtain OTP from End user. So that end user can get the confirmation of received order by notification.
                     
                     
                 </p> </div>
